# wild_ai_adventure

./: .env.example  .gitignore  Cargo.toml  Dockerfile.test  README.md  SETUP.md  config.example.json  config.example.jsonc  config.jsonc  config.schema.json  config.secrets.example.jsonc  docker-compose.test.yml  docker-compose.yml  dprint.json  libstorage_standalone.rlib  libstorage_test.rlib  reset_db.sh  run_migrations.sh  start_dev.sh
.cargo/: config.toml
.sqlx/: query-1615af87531f38b425c87725e2641cf514a731c247db3d5f564bde91de53b6a5.json  query-1f3b56bca1b5fff5084754622aa32e3945ce3ce1546112fbb7748aa55de2ef4d.json  query-2f0ea5e4f4b7ffef88c00fbd4db11a80e119116223a6957203e304b731cf8a6f.json  query-7fa69a51ddca4a45635987c6a4223bd7efa521a02d96375f57c537aa5ebc80c5.json  query-804e15cb945dd0a9a7e7bd2dd931b09840d688f877ba528a96c117a2495ab534.json  query-cfe29096bf82f5f35bd214a8974a0d21ee74d81e79b5be61f11a09b37d21162b.json
.zed/: config.schema.json  settings.json
assets/: auth.js  index.html  minimal.css  wasm.html
assets/client/js/: all-components-standalone.js  all-components.js  all-components.js.map  index-Bvkbunlo.js  types-4vF2br7O.js  types-CptiQF1l.js  types-CptiQF1l.js.map  webauthn-auth-standalone.html  webauthn-auth.js  webauthn-auth.js.map  websocket-client-BTnzRjjE.js  websocket-client-BTnzRjjE.js.map  websocket-client-BZNd2INk.js  websocket-client-BZNd2INk.js.map  websocket-client-D4dLRB7g.js  websocket-client-DSV8Le2n.js  websocket-client-DSV8Le2n.js.map  websocket-client-mANlKmgB.js  websocket-client-mANlKmgB.js.map  websocket-components-standalone.html  websocket-components.js  websocket-components.js.map  websocket-demo-standalone.html  websocket-demo-standalone.js  websocket-demo.js  websocket-demo.js.map
assets/clientlib/: all-components.js  all-components.js.map  index-Bvkbunlo.js.map  types-4vF2br7O.js.map  webauthn-auth-standalone.html  webauthn-auth.js  webauthn-auth.js.map  websocket-client-D4dLRB7g.js.map  websocket-client-n5odv0FM.js  websocket-client-n5odv0FM.js.map  websocket-components-standalone.html  websocket-components-standalone.js  websocket-components.js.map  websocket-demo-standalone.html  websocket-demo-standalone.js  websocket-demo.js  websocket-demo.js.map
assets/config/: access-log-example.jsonc  config.example.jsonc  config.jsonc  config.secrets.example.jsonc  config.test.jsonc
assets/js/: auth.js  index.html
assets/private/: auth.js  canvas.html  config.json  dashboard.html  file-upload-demo.html  index.html  secret-document.txt
assets/public/: index.html  readme.txt  websocket-demo.html  welcome.html
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
cli/src/analytics/: mod.rs
cli/src/config/: mod.rs
cli/src/users/: mod.rs
cli/src/wordlist/: mod.rs
client/js/: README.md  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
client/js/src/: index.ts
client/js/tests/: unit.test.ts
clientlib/: MODULAR_REFACTOR_SUMMARY.md  README.md  eslint.config.js  package-lock.json  package.json  setup-test-codes.js  tsconfig.json  tsconfig.web-components.json  vite.wc.config.ts  vitest.config.ts
clientlib/docs/: websocket-modular-components.md
clientlib/src/: api-client.ts  api-spec.ts  index.ts  test-data.ts  test-helpers.ts  websocket-client.ts  websocket-connection.ts  websocket-types.ts
clientlib/src/lib/: api-client.ts  file-upload.ts  index.ts  media-blob-manager.ts  test-data.ts  websocket-client.ts  websocket-connection.ts  websocket-demo-client.ts  websocket-types.ts
clientlib/src/web-components/: index.tsx  simple-test.tsx  (+4 more)
clientlib/tests/: all-routes.test.ts  integration.test.ts  unit.test.ts
clientlib/web-component/: .gitignore  README.md  WEBSOCKET_COMPONENTS.md  build.js  eslint.config.js  package-lock.json  package.json  test-websocket.html  tsconfig.json  vite.wc.config.ts
codegen/: generate_api.rs  generate_ts_client.js
codegen/templates/: all-routes.test.template.ts  api-client.template.ts  integration.test.template.ts  invite-codes.test.template.ts  test-data.template.ts  test-helpers.template.ts
docs/: ACCESS_LOGGING_SOLUTION.md  INDEX.md  account-recovery.md  file-upload-implementation.md  prompts.md  roles.md  upload-api.md
docs/clientlib/: demo-improvements.md  project-restructure.md  thumbnail-fixes.md
docs/development/: config-files-cleaned.md  setup.md  testing.md
docs/operations/: access-logging.md
docs/reference/: wordlist.md
examples/: simple_access_log.rs
migrations/: 001_initial.sql  002_session_storage.sql  003_analytics.sql  004_account_link_codes.sql  004_media_blobs.sql  004_recovery_codes.sql  005_media_blobs.sql  006_expand_invite_code_length.sql  README.md
scripts/: README.md  build_and_test.sh  build_wasm.sh  health-check.sh  md2html.sh  reset_db.sh  run_migrations.sh  start_dev.sh  test_with_coverage.sh
server/: Cargo.toml  build.rs
server/.sqlx/: query-433d93e0c7ab6c9f71b1feeeaec972a411ce0730614c86f802b41db21e4fd78f.json  query-6907e9f3e0acfd2bfb5ca3da2eaa66b4fde7dacca63f685deb16b27de8cbcb07.json  query-6de49b738e329c1f6c114d6aa01c6ee808f01abaa8adfcf165dfcd52674a0caa.json  query-8368751e3a6da5d452f524163768f6a2b02e422027c12bc2166496c47c0f652e.json  query-c2ae0cbaeb51158e7f090fb49deaae0eb17edc204b90e3246f97912bb1ab8fca.json
server/src/: api.rs  auth.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  startup.rs  storage.rs  wordlist.rs
server/src/analytics/: middleware.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
server/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  repository.rs  routes.rs
server/src/health/: handlers.rs  mod.rs  routes.rs
server/src/media/: mod.rs  models.rs  repository.rs
server/src/static_filez/: enhanced.rs  mod.rs  range_handler.rs
server/src/upload/: handlers.rs  models.rs  routes.rs
server/src/websocket/: handlers.rs  messages.rs  mod.rs
server/tests/: access_log_test.rs  integration_tests.rs
src/: analytics.rs  api.rs  auth.rs  cli.rs  cli_main.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  middleware.rs  startup.rs
(+27 files in other folders)
