[workspace]
members = ["server", "cli"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
webauthn-rs = { path = "../../webauthn-rs" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.4"
thiserror = "1.0"
axum = { version = "0.7" }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.13", features = ["postgres"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }
serde_json = "1.0"
json5 = "0.4"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
config = "0.14"
async-trait = "0.1"
