[workspace]
members = ["cli", "server"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8" }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
json5 = "0.4"
num-traits = "0.2"
rand = "0.8"
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "bigdecimal",
] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
] }
