[package]
name = "webauthn-server"
version = "0.1.0"
edition = "2021"
authors = [
    "William Brown <william@blackhats.net.au>, Ben Wishovich <ben@benw.is>",
]
license = "MPL-2.0"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
webauthn-rs = { workspace = true, features = [
    "danger-allow-state-serialisation",
] }
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
sqlx.workspace = true
chrono.workspace = true
serde_json.workspace = true
json5.workspace = true
schemars.workspace = true
config.workspace = true

[features]
default = []
