[package]
name = "webauthn-server"
version = "0.1.0"
authors = [
  "William Brown <william@blackhats.net.au>, Ben Wishovich <ben@benw.is>",
]
edition = "2021"
license = "MPL-2.0"

[dependencies]
axum.workspace = true
chrono.workspace = true
config.workspace = true
json5.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
webauthn-rs = { workspace = true, features = ["danger-allow-state-serialisation"] }

[features]
default = []
